--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-stateflow-trans = { path = "../stateflow-trans" }
+netsblox-stateflow = "0.1.0"
 netsblox-extension-macro = { path = "../../netsblox-extension-rs/netsblox-extension-macro" }
 netsblox-extension-util = { path = "../../netsblox-extension-rs/netsblox-extension-util" }
 wasm-bindgen = "0.2.92"
