vizualize in dialog

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "bindgen",
         "graphviz",
         "netsblox",
-        "stateflow"
+        "stateflow",
+        "stylesheet"
     ]
 }
