--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-netsblox-stateflow = "0.1.5"
+netsblox-stateflow = "0.1.6"
 netsblox-extension-macro = "0.1.0"
 netsblox-extension-util = "0.2.5"
-js-helpers = "0.1.5"
-getrandom = { version = "0.2.15", features = ["js"] }
+js-helpers = "0.1.7"
+getrandom = { version = "*", features = ["js"] }
 console_error_panic_hook = "0.1.7"
 
 [build-dependencies]
